--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "^2.4.0",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.0.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.3",
-    "next": "14.1.0",
+    "next": "^14.2.28",
     "next-cloudinary": "^5.20.0",
     "qs": "^6.14.0",
     "react": "^18",
