--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-masonry-css": "^1.0.16",
     "stripe": "^14.25.0",
     "svix": "^1.64.1",
     "tailwind-merge": "^2.2.1",
