--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imaginify",
+  "name": "creatix",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -30,6 +30,7 @@
     "mongoose": "^8.13.3",
     "next": "^14.2.28",
     "next-cloudinary": "^5.20.0",
+    "next-intl": "^4.1.0",
     "qs": "^6.14.0",
     "react": "^18",
     "react-dom": "^18",
